# spotify_ad_blocker

./: Cargo.toml  README.md  test.rs
src/: ad_killer.rs  main.rs
trayicon/: Cargo.toml
trayicon/src/: lib.rs  trayicon.rs  trayiconbuilder.rs
trayicon/src/sys/windows/: mod.rs  wintrayicon.rs
