[package]
name = "trayicon"
version = "0.1.3"
authors = ["Jari Otto Oskari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ciantic/trayicon-rs/"
repository = "https://github.com/ciantic/trayicon-rs/"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "basetsd"] }

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }

[lib]
name = "trayicon"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

